WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229515
[curl] REGRESSION(
r281158
): fetch('
http://localhost/
') from about:blank doesn't emit the console error message
https://bugs.webkit.org/show_bug.cgi?id=229515
Summary
[curl] REGRESSION(r281158): fetch('http://localhost/') from about:blank doesn...
Fujii Hironori
Reported
2021-08-25 14:06:10 PDT
[curl] REGRESSION(
r281158
): fetch('
http://localhost/
') from about:blank doesn't emit the console error message See
Bug#228095 Comment#18
.
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2021-08-25 14:13:44 PDT
1. Start WinCairo WK2 MiniBrowser 2. Open a local file. Go to file:///.../something.html 3. Open Web Inspector Console 4. Start a local web server Invoke "python.exe .\Tools\Scripts\run-webkit-httpd" as admin 5. Invoke "fetch('
http://localhost:8000/
')" in the Web Inspector console Expected: the following error message should be shown
> > fetch('
http://localhost:8000/
') > < Promise {status: "pending"} > [Error] Origin null is not allowed by Access-Control-Allow-Origin. > [Error] Fetch API cannot load
http://localhost:8000/
due to access control checks. > [Error] Failed to load resource: Origin null is not allowed by Access-Control-Allow-Origin. (localhost, line 0)
Actual: No such error message
Fujii Hironori
Comment 2
2021-08-26 00:26:07 PDT
Committed
r281614
(
240970@main
): <
https://commits.webkit.org/240970@main
>
Radar WebKit Bug Importer
Comment 3
2021-08-26 00:27:19 PDT
<
rdar://problem/82377669
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug