[curl] REGRESSION(r281158): fetch('http://localhost/') from about:blank doesn't emit the console error message https://bugs.webkit.org/show_bug.cgi?id=229515

Unreviewed, reverting r281158.

* NetworkProcess/curl/NetworkDataTaskCurl.cpp:
(WebKit::NetworkDataTaskCurl::invokeDidReceiveResponse):

Canonical link: https://commits.webkit.org/240970@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281614 268f45cc-cd09-0410-ab3c-d52691b4dbfc