Source/WebKit/NetworkProcess/curl/NetworkDataTaskCurl.cpp
@@ -234,8 +234,6 @@ void NetworkDataTaskCurl::invokeDidReceiveResponse()
                 m_curlRequest->completeDidReceiveResponse();
             break;
         case PolicyAction::Ignore:
-            if (m_client)
-                m_client->didCompleteWithError(ResourceErrorBase::Type::Cancellation);
             invalidateAndCancel();
             break;
         default:
